cabal-version:      3.0
name:               mktl
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mktl
    import:           warnings
    main-is:          Main.hs
    other-modules:    Mktl.Parser, Mktl.Render
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0, parsec, text, time, diagrams, diagrams-lib, diagrams-svg
    hs-source-dirs:   app
    default-language: GHC2021
